refact: refacting components to improve CSS usage and print correct word at console

--- a/src/App.css
+++ b/src/App.css
@@ -64,15 +64,15 @@ nav h1 {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-#correct {
+.correct {
   background-color: #528d4e;
 }
 
-#almost {
+.almost {
   background-color: #b49f39;
 }
 
-#error {
+.error {
   background-color: #3a393c;
 }
 
@@ -119,9 +119,9 @@ nav h1 {
   cursor: pointer;
 }
 
-#big {
+.big {
   width: 100px;
 }
-#disabled {
+.disabled {
   background-color: #3a393c;
 }
